Added API to get all the messages on the frontend from the backend on DOM loaded

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -113,7 +113,16 @@ body {
   } */
   
   .message-container{
+    text-align: center;
+  }
+  .message-container-right{
     text-align: right;
+    font-size: 1.2rem;
+  }
+
+  .message-container-left{
+    text-align: left;
+    font-size: 1.2rem;
   }
   
   .message-username {
